--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,7 +5,7 @@
   box-sizing: border-box;
 }
 
-@import url("https://fonts.googleapis.com/css?family=Baloo+Bhai&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Lato:400,700&display=swap");
 
 html,
 body,
@@ -14,7 +14,7 @@ body,
 }
 
 body {
-  background: url("./assets/Abstract-Envelope.svg");
+  background: url("./assets/felipenojentoi.jpg");
   background-size: cover;
   -webkit-font-smoothing: antialiased !important;
 }
@@ -22,6 +22,6 @@ body {
 body,
 input,
 button {
-  font-family: "Baloo Bhai", Arial, Helvetica, sans-serif;
+  font-family: "Lato", Arial, Helvetica, sans-serif;
   font-size: 14px;
 }
