--- a/frontend/src/pages/home/index.css
+++ b/frontend/src/pages/home/index.css
@@ -5,6 +5,41 @@ i {
   font-size: 14px;
 }
 
+.flex {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.flex > div {
+  flex: 1 1 250px;
+  margin: 20px;
+  text-align: center;
+}
+
+img {
+  max-width: 100%;
+  display: block;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+}
+
+.logo {
+  width: 50px;
+  height: 50px;
+}
+
+i {
+  color: #023d35;
+  line-height: 10px;
+  margin-top: 10px;
+  font-size: 14px;
+}
+
 h1 {
   margin-top: 60px;
   text-align: center;
@@ -20,4 +55,95 @@ h1::after {
   display: block;
   margin: 0 auto;
   margin-bottom: 100px;
+}
+
+h5 {
+  margin-top: 260px;
+  text-align: center;
+  font-size: 46px;
+  color: #027c6b;
+}
+
+h5::after {
+  content: "";
+  width: 250px;
+  background: currentColor;
+  height: 2px;
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 100px;
+}
+
+h3 {
+  margin-top: 250px;
+  text-align: center;
+  font-size: 46px;
+  color: #027c6b;
+}
+
+h3::after {
+  content: "";
+  width: 250px;
+  background: currentColor;
+  height: 2px;
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 100px;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: 1fr;
+  padding: 30px;
+  max-width: 900px;
+  margin: -50px auto;
+  margin-bottom: 200px;
+}
+
+.grid p {
+  max-width: 900px;
+  margin: 0 auto;
+}
+
+.grid h2 {
+  padding: 10px;
+  color: #023d35;
+  text-align: center;
+}
+
+@media (max-width: 600px) {
+  .grid {
+    grid-template-columns: 1fr;
+  }
+}
+
+.grid3 {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 20px;
+  max-width: 40rem;
+  margin: -50px auto;
+  margin-bottom: 400px;
+}
+.grid3-item:nth-child(1) {
+  grid-row: 1/2;
+}
+
+.grid3-item2 {
+  height: 100px;
+  width: 200px;
+}
+
+.grid3-item3 {
+  height: 100px;
+  width: 200px;
+}
+
+.footer {
+  display: flex;
+  height: 100px;
+  width: 100%;
+  font-size: 18px;
+  justify-content: center;
+  background-color: white;
 }
