impl of responsiveness

--- a/frontend/src/pages/home/index.css
+++ b/frontend/src/pages/home/index.css
@@ -103,6 +103,7 @@ h3::after {
 .grid p {
   max-width: 900px;
   margin: 50px auto;
+  text-align: center;
 }
 
 .grid h2 {
@@ -117,6 +118,10 @@ h3::after {
   .grid {
     grid-template-columns: 1fr;
   }
+
+  .grid {
+    text-align: center;
+  }
 }
 
 .grid3 {
@@ -128,18 +133,39 @@ h3::after {
   margin-bottom: 400px;
   text-align: center;
 }
-.grid3-item:nth-child(1) {
-  grid-row: 1/2;
+
+@media (max-width: 600px) {
+  .grid3 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
+    max-width: 40rem;
+    margin: -40px auto;
+    margin-bottom: 400px;
+    text-align: center;
+  }
+
+  .grid3 > div {
+    margin: 0 auto;
+    max-width: 600px;
+  }
 }
 
-.grid3-item2 {
-  height: 100px;
-  width: 200px;
-}
+@media (max-width: 500px) {
+  .grid3 {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 20px;
+    max-width: 40rem;
+    margin: -40px auto;
+    margin-bottom: 400px;
+    text-align: center;
+  }
 
-.grid3-item3 {
-  height: 100px;
-  width: 200px;
+  .grid3 > div {
+    margin: 0 auto;
+    max-width: 600px;
+  }
 }
 
 .footer {
